RESOLVED FIXED29367
memory leak in JavaScriptCore RegisterFile on Windows CE
https://bugs.webkit.org/show_bug.cgi?id=29367
Summary memory leak in JavaScriptCore RegisterFile on Windows CE
Joerg Bornemann
Reported 2009-09-18 04:12:38 PDT
Created attachment 39756 [details] mem leak fix On Widows CE we must decommit all committed pages before we release them. See VirtualFree documentation. Desktop Windows behaves much smoother in this situation.
Attachments
mem leak fix (1.08 KB, patch)
2009-09-18 04:12 PDT, Joerg Bornemann
no flags
Updated patch with ChangeLog (1.32 KB, patch)
2009-09-19 10:45 PDT, Simon Hausmann
hausmann: review+
Joerg Bornemann
Comment 1 2009-09-18 04:14:11 PDT
Without this patch we leak 2 MB every time after destroying a JSC instance on Windows CE.
Simon Hausmann
Comment 2 2009-09-18 05:54:12 PDT
Comment on attachment 39756 [details] mem leak fix Changed requested eviewer to George, to be sure this won't conflict with the other Windows CE port.
Simon Hausmann
Comment 3 2009-09-18 05:54:44 PDT
George, do you know if that would help or conflict with your CE port?
Simon Hausmann
Comment 4 2009-09-19 10:45:25 PDT
Created attachment 39822 [details] Updated patch with ChangeLog New patch with fixed paths and ChangeLog
Simon Hausmann
Comment 5 2009-09-22 03:30:04 PDT
Comment on attachment 39822 [details] Updated patch with ChangeLog Joerg explained the change in all detail to me and it seems like the right thing to do. George, please holler if you notice any issues with it.
Simon Hausmann
Comment 6 2009-09-22 03:47:53 PDT
Landed in r48623
George Staikos
Comment 7 2009-09-22 07:03:47 PDT
Yes it's fine. SHould have been Yong reviewing this :) Oh, and it's only really an issue if you load/unload the dll.
Joerg Bornemann
Comment 8 2009-09-22 08:11:27 PDT
(In reply to comment #7) > Yes it's fine. SHould have been Yong reviewing this :) Oh, and it's only > really an issue if you load/unload the dll. Or if you create / destroy QScriptEngine objects. ;-)
Note You need to log in before you can comment on or make changes to this bug.