Fix major memory leak in JavaScriptCore RegisterFile on Windows CE

Patch by Joerg Bornemann <joerg.bornemann@nokia.com> on 2009-09-22
Reviewed by Simon Hausmann.

https://bugs.webkit.org/show_bug.cgi?id=29367

On Widows CE we must decommit all committed pages before we release
them. See VirtualFree documentation.
Desktop Windows behaves much smoother in this situation.

* interpreter/RegisterFile.cpp:
(JSC::RegisterFile::~RegisterFile):

Canonical link: https://commits.webkit.org/40186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48623 268f45cc-cd09-0410-ab3c-d52691b4dbfc